♻️ 고객 전체 조회 테스트의 다수 데이터 생성 방식을 컬랙션 제공 메서드로 간결화하다